@@ -1,3 +1,6 @@
+  28 Sep 2015; Stefan Junker <mail@stefanjunker.de> rkt-9999.ebuild:
+  app-emulation/rkt-9999: align with upstream configuration changes
+
   17 Sep 2015; Stefan Junker <mail@stefanjunker.de> rkt-0.8.1.ebuild,
   rkt-9999.ebuild:
   app-emulation/rkt: remove unused systemd IUSE
